--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,26 +1,39 @@
 format_version: 1.4.0
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
-
+project_type: ""
 app:
   envs:
   - RELEASE_VERSION: 0.9.0
-
 workflows:
-  test:
-    before_run:
-    - go-tests
+  _install-test-tools:
     steps:
-    - path::./:
-        title: Step Test
-        description: |-
-          The example input has a default value,
-          you can overwrite it if you want to, just like we did below,
-          but the step would use the default value specified in the `step.yml`
-          file if you would not specify another value.
-        run_if: true
+    - script:
+        title: Install required testing tools
         inputs:
-        - directory_path: "./"
-
+        - content: |-
+            #!/bin/bash
+            set -ex
+            # Check for unhandled errors
+            go get -u -v github.com/kisielk/errcheck
+            # Go lint
+            go get -u -v github.com/golang/lint/golint
+  audit-this-step:
+    steps:
+    - script:
+        inputs:
+        - content: |-
+            #!/bin/bash
+            set -ex
+            stepman audit --step-yml ./step.yml
+  create-release:
+    steps:
+    - script:
+        inputs:
+        - content: |
+            #!/bin/bash
+            set -e
+            export CI=true
+            releaseman create --version $RELEASE_VERSION
   go-tests:
     before_run:
     - _install-test-tools
@@ -62,21 +75,6 @@ workflows:
             #!/bin/bash
             set -ex
             go test ./...
-  _install-test-tools:
-    steps:
-    - script:
-        title: Install required testing tools
-        inputs:
-        - content: |-
-            #!/bin/bash
-            set -ex
-            # Check for unhandled errors
-            go get -u -v github.com/kisielk/errcheck
-            # Go lint
-            go get -u -v github.com/golang/lint/golint
-
-  # ----------------------------------------------------------------
-  # --- Utility workflows
   godeps-update:
     title: Godeps update
     description: |
@@ -93,38 +91,7 @@ workflows:
             rm -rf ./vendor
             go get -t -d ./...
             godep save ./...
-
-  # ----------------------------------------------------------------
-  # --- workflows to create Release
-  create-release:
-    steps:
-    - script:
-        title:
-        inputs:
-        - content: |
-            #!/bin/bash
-            set -e
-            export CI=true
-            releaseman create --version $RELEASE_VERSION
-
-  # ----------------------------------------------------------------
-  # --- workflows to Share this step into a Step Library
-  audit-this-step:
-    steps:
-    - script:
-        inputs:
-        - content: |-
-            #!/bin/bash
-            set -ex
-            stepman audit --step-yml ./step.yml
-
   share-this-step:
-    envs:
-      # if you want to share this step into a StepLib
-      - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
-      - STEP_ID_IN_STEPLIB: recursive-touch
-      - STEP_GIT_VERION_TAG_TO_SHARE: $RELEASE_VERSION
-      - STEP_GIT_CLONE_URL: https://github.com/bitrise-steplib/steps-recursive-touch.git
     description: |-
       If this is the first time you try to share a Step you should
       first call: $ bitrise share
@@ -148,6 +115,11 @@ workflows:
       the way described in the guide printed at the end of the process.
     before_run:
     - audit-this-step
+    envs:
+    - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
+    - STEP_ID_IN_STEPLIB: recursive-touch
+    - STEP_GIT_VERION_TAG_TO_SHARE: $RELEASE_VERSION
+    - STEP_GIT_CLONE_URL: https://github.com/bitrise-steplib/steps-recursive-touch.git
     steps:
     - script:
         inputs:
@@ -157,3 +129,50 @@ workflows:
             bitrise share start -c ${MY_STEPLIB_REPO_FORK_GIT_URL}
             bitrise share create --stepid ${STEP_ID_IN_STEPLIB} --tag ${STEP_GIT_VERION_TAG_TO_SHARE} --git ${STEP_GIT_CLONE_URL}
             bitrise share finish
+  test:
+    before_run:
+    - go-tests
+    steps:
+    - change-workdir@1.0.1:
+        inputs:
+        - path: ./_tmp
+    - script@1.1.4:
+        title: Create test file
+        inputs:
+        - content: |-
+            #!/bin/bash
+            # fail if any commands fails
+            set -e
+            # debug log
+            set -x
+
+            echo "test-content" > ./test-file.txt
+    - path::./:
+        title: Step Test
+        description: |-
+          The example input has a default value,
+          you can overwrite it if you want to, just like we did below,
+          but the step would use the default value specified in the `step.yml`
+          file if you would not specify another value.
+        run_if: "true"
+        inputs:
+        - directory_path: "./"
+        - touch_time: "2017-09-01T15:00:00+00:00"
+    - script@1.1.4:
+        title: Check if test file's mTime matches with the step's time
+        inputs:
+        - content: |-
+            #!/bin/bash
+            # fail if any commands fails
+            set -e
+            # debug log
+            set -x
+
+            if [ "$(stat -x "./test-file.txt" | awk -F': ' '/Modify: /{print $2}')" = "Fri Sep  1 17:00:00 2017" ];
+            then
+                     echo "All ok"
+                     exit 0
+            else
+                     echo "File time mismatch"
+                     exit 1
+            fi
