--- a/bitrise.yml
+++ b/bitrise.yml
@@ -33,7 +33,7 @@ workflows:
         run_if: "true"
         inputs:
         - directory_path: "./"
-        - touch_time: "2017-09-01T15:00:00+00:00"
+        - touch_time: "2017-09-01T15:00:00-07:00"
     - script@1.1.4:
         title: Check if test file's mTime matches with the step's time
         inputs:
